fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@
 /* LEFT SIDE LIST FRIENDS SECTION  */
 .list-friends {
   overflow-y: scroll;
-  height: calc(100vh - 193px );
+  height: calc(100vh - 204px );
 }
 .friend {
   display: flex;
@@ -198,7 +198,7 @@ header {
 /* MAIN */
 main {
   width: 100%;
-  height: 79vh;
+  height: calc(100vh - 168px );
   overflow-y: scroll;
 }
 .bubble {
